src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__issue_browser__issue_browser_prompt_overlay_empty.snap
---
source: src/tui/snapshot_tests/issue_browser.rs
expression: terminal.backend()
---
"╔═════════════════════════════════════════════════════[ 󰝦 Issues ]═════════════════════════════════════════════════════╗"
"║  #1     Add login flow                                                                                              ║"
"║   #2     Fix database crash                                                                                          ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                   ╔══════════════════════════[ #1 — Add login flow ]═══════════════════════════╗                     ║"
"║                   ║▶ Additional instructions (optional):                                       ║                     ║"
"║                   ║╔══════════════════════════════════════════════════════════════════════════╗║                     ║"
"║                   ║║Type your prompt here...                                                  ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"╚═══════════════════║║                                                                          ║║═════════════════════╝"
"╔═══════════════════║║                                                                          ║║═════════════════════╗"
"║Title: Add login fl║║                                                                          ║║                     ║"
"║State: open  |  Lab║║                                                                          ║║                     ║"
"║───────────────────║║                                                                          ║║───────────────────  ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║╚══════════════════════════════════════════════════════════════════════════╝║                     ║"
"║                   ║Options:                                                                    ║                     ║"
"║                   ║    Produce PR — session ends when a linked PR is created                  ║                     ║"
"║                   ║    Interaction — chat with the agent; session stays alive                 ║                     ║"
"║                   ║   [ Launch ]                                                               ║                     ║"
"║                   ║[Tab] Cycle  [Space] Toggle  [Enter] Launch  [Esc] Cancel                   ║                     ║"
"║                   ╚════════════════════════════════════════════════════════════════════════════╝                     ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"[Tab] Switch pane  [Enter] Run  [Space] Select  [/] Filter  [Esc] Back                                                  "
